# harlogger

./: .gitignore  Makefile  README.md  com.apple.CFNetwork.plist  control  main.m  pyproject.toml  remote_har_listener.py  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
harlogger/: __main__.py  exceptions.py  haralyzer_patches.py  http_transaction.py  sniffers.py
src/: control
