[project]
name = "harlogger"
version = "4.0.0"
description = "Simple utlity for sniffing decrypted HTTP/HTTPS traffic on an iOS device (either jailbroken or not)"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["ios", "osx", "mac", "macos", "http", "https", "har", "sniffer", "jailbroken"]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "netanelc305", email = "netanelc305@protonmail.com" }

]
maintainers = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "netanelc305", email = "netanelc305@protonmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/doronz88/harlogger"
"Bug Reports" = "https://github.com/doronz88/harlogger/issues"

[project.scripts]
rpcclient = "harlogger.__main__:cli"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
