[project]
name = "harlogger"
description = "Simple utlity for sniffing decrypted HTTP/HTTPS traffic on an iOS device (either jailbroken or not)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["ios", "osx", "mac", "macos", "http", "https", "har", "sniffer", "jailbroken"]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "netanelc305", email = "netanelc305@protonmail.com" }

]
maintainers = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "netanelc305", email = "netanelc305@protonmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/doronz88/harlogger"
"Bug Reports" = "https://github.com/doronz88/harlogger/issues"

[project.scripts]
harlogger = "harlogger.__main__:cli"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = {attr = "harlogger._version.__version__"}

[tool.setuptools_scm]
version_file = "harlogger/_version.py"

[build-system]
requires = ["setuptools>=43.0.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # Shadowing a built-in
    "A001",
    # LineTooLong
    "E501",
    # Custom error classes
    "TRY003",
    # Use `logging.exception` instead of `logging.error`
    "TRY400",
    # Abstract `raise` to an inner function
    "TRY301",
    # Do not perform function call `csfield` in dataclass defaults
    "RUF009",
]

[tool.ruff.format]
preview = true
